--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap": "^3.3.7",
     "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
     "copyfiles": "^1.0.0",
@@ -53,6 +54,7 @@
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
     "react-addons-test-utils": "^15.0.0",
+    "react-bootstrap": "^0.30.7",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
     "style-loader": "^0.13.0",
@@ -62,8 +64,11 @@
   },
   "dependencies": {
     "core-js": "^2.0.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.0.0",
     "react-router": "^3.0.1"
   }
