--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     "react": "^15.0.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.0.0",
+    "react-fontawesome": "^1.5.0",
     "react-router": "^3.0.2"
   }
 }
