--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
   },
   "dependencies": {
     "core-js": "^2.0.0",
+    "jquery": "^3.1.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "normalize.css": "^4.0.0",
