--- a/client/package.json
+++ b/client/package.json
@@ -40,9 +40,12 @@
     "file-loader": "^0.9.0",
     "glob": "^7.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "^1.0.0",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.0.0",
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
