--- a/client/package.json
+++ b/client/package.json
@@ -76,6 +76,7 @@
     "react-dom": "^15.0.0",
     "react-fontawesome": "^1.5.0",
     "react-google-login": "^2.8.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "rest-redux": "^0.4.0"
   }
 }
