Added purchase order model

--- a/server/server/model-config.json
+++ b/server/server/model-config.json
@@ -47,5 +47,9 @@
   "customer": {
     "dataSource": "db",
     "public": true
+  },
+  "purchase-order": {
+    "dataSource": "db",
+    "public": true
   }
 }
