--- a/server/server/model-config.json
+++ b/server/server/model-config.json
@@ -51,5 +51,9 @@
   "purchase-order": {
     "dataSource": "db",
     "public": true
+  },
+  "purchase-item": {
+    "dataSource": "db",
+    "public": true
   }
 }
